zno-macro-draft/tests/zno/ui/err/014-optional-value-type-is-ident.stderr
error: expected literal
 --> tests/zno/ui/err/014-optional-value-type-is-ident.rs:3:37
  |
3 | #[zno(name = "a", enter_on_poll = y)]
  |                                     ^
