zno-macro-draft/tests/zno/ui/err/014-optional-value-type-is-ident.rs
use zno::zno;

#[zno(name = "a", enter_on_poll = y)]
fn f() {}

fn main() {
    f();
}
